| Bug #50495 | 'Row size too large' for plugin, but works for built-in innodb | ||
|---|---|---|---|
| Submitted: | 21 Jan 2010 7:48 | Modified: | 19 Jun 2010 0:20 |
| Reporter: | Shane Bester (Platinum Quality Contributor) | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: InnoDB Plugin storage engine | Severity: | S3 (Non-critical) |
| Version: | 5.1.42 and 1.0.6 plugin, 5.1.44 | OS: | Any |
| Assigned to: | Marko Mäkelä | CPU Architecture: | Any |
[21 Jan 2010 7:49]
Shane Bester
large table to import
Attachment: bug50495_schema.sql (application/octet-stream, text), 7.07 KiB.
[21 Jan 2010 8:11]
Shane Bester
same issue as described here: http://forums.innodb.com/read.php?3,850,850#msg-850
[21 Jan 2010 8:22]
Sveta Smirnova
Thank you for the report. Verified as described.
[20 Apr 2010 11:48]
Marko Mäkelä
In mysql-5.1-innodb r3405, the size check at DDL time is only enabled when innodb_strict_mode is set. (Sorry, I am still having trouble with my bzr email hook. It is not sending commit or push messages.)
[21 Apr 2010 9:41]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/106211
[21 Apr 2010 9:41]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/106212
[21 Apr 2010 9:54]
Marko Mäkelä
The patch and the adjustments to the test case were pushed to mysql-5.1-innodb. (Sorry, no email for the original fix was sent due to bad bzr configuration on my system.)
[21 Apr 2010 10:27]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/106235
[21 Apr 2010 10:27]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/106236
[5 May 2010 15:24]
Bugs System
Pushed into 5.1.47 (revid:joro@sun.com-20100505145753-ivlt4hclbrjy8eye) (version source revid:kristofer.pettersson@sun.com-20100503172109-f9hracq5pqsaomb1) (merge vers: 5.1.47) (pib:16)
[8 May 2010 17:31]
Paul DuBois
Noted in 5.1.47 changelog. InnoDB Plugin failed with "Row size too large" errors for some tables that were legal with the built-in InnoDB.
[16 May 2010 2:14]
James Day
Paul, Please change the release note to say: "InnoDB Plugin checks to see whether a row could possibly exceed the maximum size if all columns are fully used. This produced "Row size too large" errors for some tables that could be created with the built-in InnoDB. Now the check is only done when innodb_strict_mode is on or if the table is dynamic or compressed."
[16 May 2010 20:32]
Paul DuBois
Revised changelog entry per previous comment.
[28 May 2010 6:14]
Bugs System
Pushed into mysql-next-mr (revid:alik@sun.com-20100524190136-egaq7e8zgkwb9aqi) (version source revid:alik@sun.com-20100512070920-xgpmqeytp0gc183c) (pib:16)
[28 May 2010 6:42]
Bugs System
Pushed into 6.0.14-alpha (revid:alik@sun.com-20100524190941-nuudpx60if25wsvx) (version source revid:alik@sun.com-20100507093037-7cykrx1n73v0tetc) (merge vers: 6.0.14-alpha) (pib:16)
[28 May 2010 7:10]
Bugs System
Pushed into 5.5.5-m3 (revid:alik@sun.com-20100524185725-c8k5q7v60i5nix3t) (version source revid:alexey.kopytov@sun.com-20100507164602-8w09samq3mpvbxbn) (merge vers: 5.5.5-m3) (pib:16)
[30 May 2010 0:18]
Paul DuBois
Noted in 5.5.5 changelog.
[17 Jun 2010 12:20]
Bugs System
Pushed into 5.1.47-ndb-7.0.16 (revid:martin.skold@mysql.com-20100617114014-bva0dy24yyd67697) (version source revid:martin.skold@mysql.com-20100616204905-jxjg342w35ks9vfy) (merge vers: 5.1.47-ndb-7.0.16) (pib:16)
[17 Jun 2010 13:08]
Bugs System
Pushed into 5.1.47-ndb-6.2.19 (revid:martin.skold@mysql.com-20100617115448-idrbic6gbki37h1c) (version source revid:martin.skold@mysql.com-20100615090726-jotpykke96le59w5) (merge vers: 5.1.47-ndb-6.2.19) (pib:16)
[17 Jun 2010 13:49]
Bugs System
Pushed into 5.1.47-ndb-6.3.35 (revid:martin.skold@mysql.com-20100617114611-61aqbb52j752y116) (version source revid:martin.skold@mysql.com-20100616120453-jh7wr05z1vf7r8pm) (merge vers: 5.1.47-ndb-6.3.35) (pib:16)
[25 Oct 2010 5:54]
Roel Van de Paar
See bug #55541

Description: the table in the attached file cannot be created in innodb plugin 1.0.6, but can be created in built-in innodb. the error is: <cut> -> col193 varchar(255) charset latin1, -> col194 varchar(255) charset latin1, -> col195 varchar(255) charset latin1, -> col196 varchar(255) charset latin1)engine=innodb; ERROR 1118 (42000): Row size too large. The maximum row size for the used table type, not counting BLOBs, is 8126. You have to change some columns to TEXT or BLOBs mysql> How to repeat: run attached ddl on built-in innodb and it works. run it on innodb plugin and it fails.